--- a/Темы.md
+++ b/Темы.md
@@ -1,1 +1,40 @@
+Темы.
 
+Чтобы изменить тему необходимо указать в настройках 
+
+return [
+    'config' => [
+        'secretKey' => 'mi5434w', // Секретный ключ
+        //'theme' => '', //'ds', // активная тема из папки themes
+        ....
+
+Тема должна называться одноименно каталогу, который расположен в папке themes.
+Структура файлов в папке с темой оформляется по стандартам MVC, а именно контроллер/представление
+В теме может присутствовать свой Bundle (описание набора ресурсов), который должен быть унаследован от framework\components\Bundle
+Данный Bundle рекомендуется включить в опцию инициализации компонента AssetManeger в настройках
+
+  'components' =>
+        [
+            'db' => [
+                'class' => 'framework\\components\\db\\DataBase',
+                'options' => [
+                    'host' => 'localhost',
+                    'database' => 'clear', // Название базы
+                    'username' => 'root', // Имя пользователя
+                    'password' => '', // Пароль
+                    'defaultCharset' => 'utf-8',
+                ],
+            ],
+            'user' => [
+                'class' => 'application\\models\\User',
+                'options' => [
+                    'autoLogin' => true
+                ]
+            ],
+            'assetManager' => [
+                'class' => 'framework\\components\\AssetManager',
+                'options' => [
+                    'bundles' => ['themes\\basic\\BasicBundle'],
+                    'auto_reload' => true,
+                ]
+            ],
