--- a/0._______В работе.md
+++ b/0._______В работе.md
@@ -1,7 +1,7 @@
 1. На данный момент сделан AssetManager без учете зависимостей и отсутствием возможности указывать в шаблонах ссылки на опубликованные ресурсы (картинки и т.п.)
 2. Предполагается сделать возможным смотреть пути публикации ресурсов (в т.ч. Hesh тем) в админ панели.
-3. Чтобы начать разработку админ панели необходимо сделать вход
-3.1. Требования к входу:
-3.1.1. Максимальное удобство (email и пароль)
-3.1.2. Пароль храниться как хеш пароль+секретный ключ в md5
+[Решено]3. Чтобы начать разработку админ панели необходимо сделать вход
+  [Решено]3.1. Требования к входу:
+  [Решено]3.1.1. Максимальное удобство (email и пароль)
+  [Решено]3.1.2. Пароль храниться как хеш пароль+секретный ключ в md5
 
