--- a/0._______В работе.md
+++ b/0._______В работе.md
@@ -1,7 +1,14 @@
 1. На данный момент сделан AssetManager без учете зависимостей и отсутствием возможности указывать в шаблонах ссылки на опубликованные ресурсы (картинки и т.п.)
-2. Предполагается сделать возможным смотреть пути публикации ресурсов (в т.ч. Hesh тем) в админ панели.
-[Решено]3. Чтобы начать разработку админ панели необходимо сделать вход
-  [Решено]3.1. Требования к входу:
-  [Решено]3.1.1. Максимальное удобство (email и пароль)
-  [Решено]3.1.2. Пароль храниться как хеш пароль+секретный ключ в md5
 
+2. Предполагается сделать возможным смотреть пути публикации ресурсов (в т.ч. Hesh тем) в админ панели.
+
+3. [Решено] Чтобы начать разработку админ панели необходимо сделать вход
+3.1. [Решено]Требования к входу:
+  [Решено] 3.1.1. Максимальное удобство (email и пароль)
+  [Решено] 3.1.2. Пароль храниться как хеш пароль+секретный ключ в md5
+
+4. [Решено] 05.07. компонент user заменен на identy в целях поддержки использования модулей как компонентов системы.
+
+5. Необходимо приступить к разработке модулей
+5.1. Продумать архитектуру модулей с учетом единого подхода к маршрутизации как основной таки в модуле.
+5.2. Недопускать "жесткого" расположения модулей (модули могут храниться где угодно).
